vue 3 version + vue plugin match with vue 3

--- a/resources/js/lang/en.json
+++ b/resources/js/lang/en.json
@@ -1,5 +1,8 @@
 {
     "homepage": "Home",
     "film_feed": "Video Feed",
-    "logout": "Logout"
+    "logout": "Logout",
+    "profile": "Your Profile",
+    "login": "Login",
+    "signup": "Signup"
 }
