--- a/resources/js/lang/vi.json
+++ b/resources/js/lang/vi.json
@@ -17,6 +17,7 @@
     "post_uploading": "Đang tải lên bài viết của bạn ...",
     "create": "Tạo",
     "close": "Đóng",
+    "you": "Bạn",
     "menu": {
         "create_post": "Đăng bài",
         "notification": "Thông báo"
@@ -141,7 +142,11 @@
         "reply_comment": "Đã phản hồi một bình luận của bạn",
         "reply_comment_post": "Đã phản hồi một bình luận trong bài viết của bạn",
         "join_community": "Đã đã tham gia một cộng đồng của bạn",
-        "leave_community": "Đã rời khỏi cộng đồng của bạn"
+        "leave_community": "Đã rời khỏi cộng đồng của bạn",
+        "share_post": "Đã chia sẻ bài viết của bạn",
+        "insert_post_community": "Đã đăng bài viết trong nhóm của bạn",
+        "community_del_member": "Quản trị viên đã xóa bạn ra khỏi cộng đồng",
+        "community_del_post": "Quản trị viên đã xóa bài viết của bạn"
     },
     "chat": {
         "title": "Tin nhắn",
