update: fix bug + add text

--- a/resources/js/lang/vi.json
+++ b/resources/js/lang/vi.json
@@ -125,7 +125,7 @@
             "university": "Đại học",
             "university_name": "Tên trường đại học",
             "iam": "Tôi là ",
-            "male": "Name",
+            "male": "Nam",
             "female": "Nữ",
             "other": "Khác",
             "update_success": "Thông tin của bạn đã được thay đổi",
